updated about link + map button label

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			onclick="window.location.href='about.html'" />
 		-->
 			<input class="pagebutton" type="button" value="About"
-			onclick="window.location.href='https://docs.google.com/document/d/1cQdle2dkwIltAZptB4byrzixM74GN1SnmJSggiWK--A/edit?usp=sharing'" />
+			onclick="window.location.href='https://drive.google.com/file/d/1s80p88jAbGUMsuKvRXLKi555yHsFcFcd/view?usp=sharingaring'" />
 		</form>
 	</div>
 	<br/><br/>
@@ -78,7 +78,7 @@
 		</div>
 	</div>
 	
-	<button class="pagebutton" onclick="myFunction()">Expand Map</button>
+	<button class="pagebutton" onclick="myFunction()">Resize</button>
 
 	<div id="map">
 		<div id="statemap"></div>
