--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 			function refreshSurveyData() {
 				drawTimelineGraphs();
 				drawAgesGraph(SLE_data);
+				drawSLEGraph(SLE_data);
+
 			}
 			
 			// Load the survey data
