added Demo button + title for map

--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
 		-->
 			<input class="pagebutton" type="button" value="About"
 			onclick="window.location.href='https://drive.google.com/file/d/1s80p88jAbGUMsuKvRXLKi555yHsFcFcd/view?usp=sharingaring'" />
+			<input class="pagebutton" type="button" value="Demo"
+			onclick="window.location.href='https: '" />
+
 		</form>
 	</div>
 	<br/><br/>
-	<div class="pagetext">
-		<p>
-			TODO: Describe the visualization, and link to a demo on YouTube.
-		</p>
-	</div>
+	
 </div>
 
 <div id="vis">
@@ -80,7 +79,8 @@
 		</div>
 	</div>
 	
-	<button class="pagebutton" onclick="myFunction()">Resize</button>
+		<button class="pagebutton" onclick="myFunction()">Resize</button>
+		<h3> Where did you come from? </h3>
 
 	<div id="map">
 		<div id="statemap"></div>
