Moved the About document to a local PDF file and updated the button.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 			onclick="window.location.href='about.html'" />
 		-->
 			<input class="pagebutton" type="button" value="About"
-			onclick="window.location.href='https://drive.google.com/file/d/1s80p88jAbGUMsuKvRXLKi555yHsFcFcd/view?usp=sharingaring'" />
+			onclick="window.location.href='About.pdf'" />
 			<input class="pagebutton" type="button" value="Demo"
-			onclick="window.location.href='https: '" />
+			onclick="window.location.href='https://youtu.be/leaMRRxK0lg'" />
 
 		</form>
 	</div>
